# xyvora

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  Requirements Document  pyproject.toml  tasks.yaml  xyvora.py
.github/workflows/: ci.yml
agent-harness-prompts/: 01_init_git_repo.md  02_directory_structure.md  03_ci_config.md  04_code_formatting.md  05_package_manager.md  06_app_scaffold.md  07_agents_md.md  08-11_docs_and_quality.md  12-14_tooling_and_planning.md  15-20_autonomous_execution.md  21-22_maintenance.md  README.md
docs/: architecture.md  development.md  maintenance.md
docs/adr/: 001-single-entry-point.md
src/tests/: test_imports.py  test_main.py  test_modules_http.py  test_reporter.py  test_scanner.py  test_utils.py
src/xyvora/: __init__.py  main.py  reporter.py  scanner.py  utils.py
src/xyvora/modules/: ad.py  ftp.py  http.py  smb.py  ssh.py
